push bài tập 1/11/2020

--- a/Ss4_Git_HTML/Bài Tập/[Bài tập] Tạo trang CV cá nhân/TrangCVcanhan.html
+++ b/Ss4_Git_HTML/Bài Tập/[Bài tập] Tạo trang CV cá nhân/TrangCVcanhan.html
@@ -1,3 +1,25 @@
-<ul style="list-style-type:disc;">
-    <li>Họ và tên</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>[Bài tập] Tạo trang CV cá nhân</title>
+</head>
+
+<body>
+                <h1>Đơn xin việc</h1>
+    <ul>
+        <li>Họ và tên : Nguyễn Thị Lung Linh</li>
+        <li>Địa chỉ : Hồ Chí Minh</li>
+        <li>Số điện thoại : 0905509905</li>
+        <li>Email : truong2242@gmail.com</li>
+        <li>Ảnh :</li>
+        <img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com"> </li>
+        <li>Học vấn : 12/12</li>
+        <li>Bằng cấp : Tốt nghiệm trung học phổ thông</li>
+        <li>Kỹ năng : không</li>
+        <li>Kinh nghiệm : không</li>
+        <li>Định hướng : Muốn được biết thêm kinh nghiệm</li>
+    </ul>
+    <a href="https://github.com/QuangTruong224?tab=repositories"></a>
+</body>
