--- a/Ss3 HTML Form_Table/Bài tập/Tạo bảng đơn giản/baitap.html
+++ b/Ss3 HTML Form_Table/Bài tập/Tạo bảng đơn giản/baitap.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF - 8">
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-    <h1 style="text-align: center;color: blue">THỜI KHÓA BIỂU</h1>
-    <p style="text-align: left;color: blue">Lớp : T0908l</p>
-    <p style="text-align: left;color: blue">GV : KhoaNV</p>
-    <br><p style="text-align: left;color: blue">Phòng học : Class3/Lab3</p>
-    <tr><p style="text-align: right;color: blue">Thời gian học : 13h30 -17h30</p></tr>
-    <p style="text-align: right;color: blue">Ngày học : Thứ 3,5,7</p>
-    <table border="1" style="font-family: arial, sans-serif;
-border-collapse: collapse;
-width: 100%;"> 
+<h1 style="color:blue;text-align: center">Thời Khóa Biểu</h1>
+<table style="margin: auto;color: blue;width: 50%">
     <tr>
-        <th style="text-align: center;width: 50%;background-color: yellow;color: black;">Thứ 3</th>
-        <th style="text-align: center;width: 50%;background-color: yellow;color: black;">Thứ 5</th>
-        <th style="text-align: center;width: 50%;background-color: yellow;color: black;">Thứ 7</th>
+        <th style="text-align: left">Lớp:T0908I</th>
+        <th style="text-align: right">Thời gian học:13h30-17h30</th>
     </tr>
     <tr>
-        <td style="text-align: left;color: gray">CF - T1,L1</td>
-        <td style="text-align: left;color: gray">CF - T2,L2</td>
-        <td style="text-align: left;color: gray">CF - T3,L3</td>
+        <th style="text-align: left">Giáo Viên:KhoaNV</th>
+        <th style="text-align: right ">Ngày Học:Thứ 3,5,7</th>
     </tr>
     <tr>
-        <td style="text-align: left;color: gray">CF - T4,L4</td>
-        <td style="text-align: left;color: gray">CF - Written Test</td>
-        <td style="text-align: left;color: gray">C - T1,L1</td>
+        <th style="text-align: left">Phòng Học:Class3/Lab3</th>
     </tr>
-    </table>
+
+</table>
+<table border="2" width="50%"style="margin: auto" " ;>
+    <tr style="background-color:#f7ff00">
+        <th colspan="3" style="background-color:white"></th>
+        <th>Thứ 3</th>
+        <th>Thứ 5</th>
+        <th>Thứ 7</th>
+    </tr>
+    <tr style="background-color:#ff6f00">
+        <th>Tuần</th>
+        <th>Ngày bắt đầu</th>
+        <th>Ngày kết thúc</th>
+        <th colspan="3">Môn học</th>
+    </tr>
+    <tr>
+        <td>01</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
+        <td>CF-T1,L1</td>
+        <td>CF-T2,L2</td>
+        <td>CF-T3,L3</td>
+    </tr>
+    <tr>
+        <td>02</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
+        <td>CF-T4,L4</td>
+        <td>CF-Written Test</td>
+        <td>C-T1,L1</td>
+    </tr>
+    <tr>
+        <td>03</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+    </tr>
+</table>
+
+
+
 </body>
 </html>
