--- a/Ss3 HTML Form_Table/Thực hành/Tạo bảng cơ bản/thuchanh.html
+++ b/Ss3 HTML Form_Table/Thực hành/Tạo bảng cơ bản/thuchanh.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF - 8">
-        <title>Table simple</title>
-    </head>
+
+<head>
+    <meta charset="UTF - 8">
+    <title>Table simple</title>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+        td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+tr:nth-child() {
+    background-color: #dddddd;
+}
+    </style>
+</head>
+
 <body>
     <table border="1">
         <tr>
@@ -43,4 +60,5 @@
         </tr>
     </table>
 </body>
+
 </html>
