push bai tap 4/11/2020

--- a/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Biến,kiểu dữ liệu và toán tử/bai3.html
+++ b/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Biến,kiểu dữ liệu và toán tử/bai3.html
@@ -8,9 +8,9 @@
 
 <body>
     <script>
-        let R = prompt("Nhập bán kính",);
-        R = parseInt(R);
-        let S = 3.14 * R * 2 
+        let R = parseInt(prompt("Nhập bán kính",));
+
+        let S = 3.14 * R * 2
         alert("Diện tích hình tròn=" + S);
     </script>
 </body>
