--- a/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Ứng dụng máy tính/baitap.html
+++ b/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Ứng dụng máy tính/baitap.html
@@ -2,78 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><h1>Ứng dụng máy tính</h1></title>
+    <title>Bài tập ứng dụng máy tính</title>
 </head>
 <body>
-<form>
-    <input type="text" id="t1">
-    <input type="text" id="t2">
-    <table style="width: 100px">
-        <td id="c">
-        <td >
-            <button type="button" onclick="showMessage('add')">Addition(+)</button>
-        </td>
-        <td>
-            <button type="button" onclick="showMessage('sub')">Subtraction(-)</button>
-        </td>
-        <td>
-            <button type="button" onclick="showMessage('mul')">Multiplication(*)</button>
-        </td>
-        <td>
-            <button type="button" onclick="showMessage('div')">Division(/)</button>
-        </td>
-        </td>
-
-    </table>
-    Result Division: <p id ='result'></p>
+    <form>
+        <table>
+            <tr>
+                <td colspan="2">
+                    <input type="text" name="So1" value=" " id="So1">
+                </td>
+                <td colspan="2">
+                    <input type="text" name="So2" value=" " id="So2">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="button" name="TinhToan" id="Add" value="Addition(+)" onclick="KQ.value = add()">
+                </td>
+                <td>
+                    <input type="button" name="TinhToan" id="Sub" value="Subtraction(-)" onclick="KQ.value = sub()" >
+                </td>
+                <td>
+                    <input type="button" name="TinhToan" id="Multi" value="Multiplication(*)" onclick="KQ.value = mul()" >
+                </td>
+                <td>
+                    <input type="button" name="TinhToan" id="Div" value="Division(/) " onclick="KQ.value = div()" >
+                </td>
+            </tr>
+            <tr>
+                <td>Kết Quả</td>
+                <td>
+                    <input type="text" name="KQ" value="" id="KQ" disabled>
+                </td>
+            </tr>
+        </table>
+    </form>
     <script>
-        function showMessage(operator){
-            let a= document.getElementById('t1').value;
-            let b= document.getElementById('t2').value;
-            let c= document.getElementById('c').value;
-            let result ;
-            switch (operator) {
-                case "add":
-                    result = parseInt(a) + parseInt(b);
-                    document.getElementById('result').innerText=result
-                    break;
-                case "sub":
-                    result = parseInt(a) - parseInt(b);
-                    document.getElementById('result').innerText=result
-                    break;
-                case "mul":
-                    result = parseInt(a) * parseInt(b);
-                    document.getElementById('result').innerText=result
-                    break;
-                case "div":
-                    result = parseInt(a) / parseInt(b);
-                    document.getElementById('result').innerText=result
-                    break;
-            }
-
-
-
-
-
-
-
-
-
-
-
+        function add()
+        {
+            var x = parseFloat(document.getElementById('So1').value);
+            var y = parseFloat(document.getElementById('So2').value);
+            var kq = x+y;
+            return kq;
         }
 
+        function sub()
+        {
+            var x = parseFloat(document.getElementById('So1').value);
+            var y = parseFloat(document.getElementById('So2').value);
+            var kq = x-y;
+            return kq;
+        }
 
+        function mul()
+        {
+            var x = parseFloat(document.getElementById('So1').value);
+            var y = parseFloat(document.getElementById('So2').value);
+            var kq = x*y;
+            return kq;
+        }
 
-
-
+        function div()
+        {
+            var x = parseFloat(document.getElementById('So1').value);
+            var y = parseFloat(document.getElementById('So2').value);
+            var kq = x/y;
+            return kq;
+        }
     </script>
-
-
-
-
-
-
-        </form>
 </body>
 </html>
