push thuc hanh 3/11/2020

--- a/Ss6_Tổng quan JavaScript/Bài tập/Tính tổng 2 số nhập vào người dùng/bai1.html
+++ b/Ss6_Tổng quan JavaScript/Bài tập/Tính tổng 2 số nhập vào người dùng/bai1.html
@@ -9,7 +9,7 @@
     let a= parseInt (prompt("nhập số a"));
     let b= parseInt  (prompt("nhập số b"));
     let sum = a + b
-    alert(sum)
+    alert("Tổng="+sum)
 </script>
 </body>
 </html>
