push bai tap 5/11/2020

--- a/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Biến,kiểu dữ liệu và toán tử/bai2.html
+++ b/Ss7_Biến_kiểu dữ liệu và toán tử/Bài tập/Biến,kiểu dữ liệu và toán tử/bai2.html
@@ -10,7 +10,7 @@
     <script>
         let Celsius = parseInt(prompt("Enter the C"));
         let Fahrenheit = (9 * Celsius) / 5 + 32;
-        document.write('0F=' + Fahrenheit);
+        alert('0F=' + Fahrenheit);
 
     </script>
 </body>
