push bai tap 8/11/2020

--- a/Ss9_Cấu trúc điều kiện 2/Bài tập/Do you love me/baitap.html
+++ b/Ss9_Cấu trúc điều kiện 2/Bài tập/Do you love me/baitap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mỹ Hậu</title>
+    <title>Do you love me</title>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         </form>
         <script>
                 function showMessage() {
-                    alert("Tối cho lưu manh nhá")
+                    alert("I Love You!!!")
                 }
 
                 function showMessage1() {
