--- a/Ss9_Cấu trúc điều kiện 2/Bài tập/Luyện tập cấu trúc điều kiện 2/bai12.html
+++ b/Ss9_Cấu trúc điều kiện 2/Bài tập/Luyện tập cấu trúc điều kiện 2/bai12.html
@@ -6,28 +6,29 @@
 </head>
 <body>
     <script>
-let tienvay= parseInt(prompt("nhập số tháng vay"))
+let tienvay= parseInt(prompt("nhập số tiền cần vay"))
+let thangvay= parseInt(prompt("nhập số tháng vay"))
 switch (thangvay) {
     case 6:
-        laihangthang = tienvay * (0.05/12);
+        laihangthang = tienvay * (0.05/12)
         trahangthang = tienvay/thangvay + laihangthang;
         tongcong = laihangthang + trahangthang;
         alert("số tiền trong 6 tháng:"+tongcong);
         break;
     case 12:
-        laihangthang = tienvay * (0.07/12);
+        laihangthang = tienvay * (0.07/12)
         trahangthang = tienvay/thangvay + laihangthang;
         tongcong = laihangthang + trahangthang;
         alert("số tiền trong 6 tháng:"+tongcong);
         break;
     case 24:
-        laihangthang = tienvay * (0.09/12);
+        laihangthang = tienvay * (0.09/12)
         trahangthang = tienvay/thangvay + laihangthang;
          ongcong = laihangthang + trahangthang;
         alert("số tiền trong 6 tháng:"+tongcong);
         break;
     case 36:
-        laihangthang = tienvay * (0.11/12);
+        laihangthang = tienvay * (0.11/12)
         trahangthang = tienvay/thangvay + laihangthang;
         tongcong = laihangthang + trahangthang;
         alert("số tiền trong 6 tháng:"+tongcong);
