--- a/Ss9_Cấu trúc điều kiện 2/Bài tập/Do you love me/baitap.html
+++ b/Ss9_Cấu trúc điều kiện 2/Bài tập/Do you love me/baitap.html
@@ -13,7 +13,7 @@
         </form>
         <script>
                 function showMessage() {
-                    alert("I Love You!!!")
+                    alert("Ai lớp diu !!")
                 }
 
                 function showMessage1() {
