--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai1.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai1.html
@@ -13,7 +13,7 @@
         let i;
         let nhap;
         for (i = 0; i < 10;) {
-            nhap = prompt("nhập số nguyên: ");
+            nhap =parseInt (prompt("nhập số nguyên: "));
             if ((nhap > 0 || nhap <= 0) && parseInt(nhap) == nhap) {
                 number.push(nhap);
                 i++;
