--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai7.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai7.html
@@ -15,7 +15,7 @@
 
     for (i=0; i<10; ){
 
-        nhap = prompt("nhập số nguyên: ");
+        nhap =parseInt (prompt("nhập số nguyên: "));
         if ((nhap>0|| nhap<=0)&&parseInt(nhap)== nhap){
             number.push(nhap);
             i++;
@@ -25,7 +25,7 @@
     }
 
     do {
-        nhapV = prompt("nhập số nguyên V: ");
+        nhapV =parseInt (prompt("nhập số nguyên V: "));
         if ((nhapV>0|| nhapV<=0)&&parseInt(nhapV)== nhapV){
             break;
         } else {
