--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai2.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai2.html
@@ -16,7 +16,7 @@
         let viTri;
 
         for (i = 0; i < 10;) {
-            nhap = prompt("nhập số nguyên: ");
+            nhap =parseInt (prompt("nhập số nguyên: "));
             if ((nhap > 0 || nhap <= 0) && parseInt(nhap) == nhap) {
 
                 number.push(nhap);
