--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai8.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai8.html
@@ -13,7 +13,7 @@
     let nhap;
     for (i=0 ; i<10 ; ){
 
-        nhap = prompt("nhap so nguyen thu:" +(i+1) );
+        nhap =parseInt (prompt("nhap so nguyen thu:" +(i+1) ));
         if ((nhap >0 || nhap <= 0)&&parseInt(nhap)== nhap){
             number.push(nhap);
             i++;
