--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai5.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai5.html
@@ -6,20 +6,31 @@
 </head>
 <body>
 <script>
-    let array = [-24,-22,-4,-20,-8,-19,0,6,19,14,21,10];
-    let i;
-    let soAm =[];
-    let count =0;
+    // let array = [-24,-22,-4,-20,-8,-19,0,6,19,14,21,10];
+    // let i;
+    // let soAm =[];
+    // let count =0;
 
-    for (i=0; i< array.length ; i++){
+    // for (i=0; i< array.length ; i++){
 
-        if (array[i]<0){
-            soAm.push(array[i]);
-            count++;
-        }
+    //     if (array[i]<0){
+    //         soAm.push(array[i]);
+    //         count++;
+    //     }
+    // }
+    // document.write("dãy số đã cho là:" + array + "<br>");
+    // document.write("số nguyên âm trong dãy số là "+ count++ + "bao gồm" + soAm.join(","));
+    let a=[];
+let n= parseInt(prompt("Số lượng phần tử:"));
+let soNguyenAm =0 ;
+for(let i = 0; i < n; i++) {
+    a[i] = parseInt(prompt("Nhập phân tử " + i));
+    console.log(a[i]);
+    if (a[i] < 0 ){
+        soNguyenAm += 1 ;
     }
-    document.write("dãy số đã cho là:" + array + "<br>");
-    document.write("số nguyên âm trong dãy số là "+ count++ + "bao gồm" + soAm.join(","));
+
+}document.write("có " + soNguyenAm + " số nguyên âm ");
 </script>
 </body>
 </html>
