--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai7.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai7.html
@@ -7,50 +7,14 @@
 <body>
 
 <script>
-    let number = []
-    let i ;
-    let nhap;
-    let nhapV;
-    let viTri;
-
-    for (i=0; i<10; ){
-
-        nhap =parseInt (prompt("nhập số nguyên: "));
-        if ((nhap>0|| nhap<=0)&&parseInt(nhap)== nhap){
-            number.push(nhap);
-            i++;
-        } else {
-            alert("nhập sai:");
-        }
+    let array = [3, 55, 55, 55, 7, 8, 55, 77, 55, 99];
+let numberV = parseInt(prompt('nhập số nguyên V:'));
+for (let i = 0; i < array.length; i++) {
+    if(numberV==array[i]) {
+        array.splice(i,1,0);
     }
-
-    do {
-        nhapV =parseInt (prompt("nhập số nguyên V: "));
-        if ((nhapV>0|| nhapV<=0)&&parseInt(nhapV)== nhapV){
-            break;
-        } else {
-            alert("nhập sai:");
-        }
-    } while ( !((nhapV>0|| nhapV<=0)&& parseInt(nhapV)== nhapV) )
-
-    for (let i = 0; i < number.length; i++) {
-        if (nhapV == number[i]) {
-            viTri = i
-        }
-    }
-
-    let a = viTri
-
-    for ( ; a< number.length; a++){
-        if (a== (number.length-1) ){
-            number[a] = 0
-        } else {
-            number[a] = number[a+1]
-        }
-    }
-
-    document.write(nhapV+"<br>");
-    document.write("dãy số" + number)
+}
+alert(array);
 
 </script>
 
