--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai9.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai9.html
@@ -6,43 +6,16 @@
 </head>
 <body>
 <script>
-    let mangSoNguyenA = [];
-    let mangSoNguyenB = [];
-    let mangSoNguyenC = [];
-    let i;
-    let nhap;
-
-    for (i=0 ; i<10 ; ){
-        nhap =parseInt (prompt("nhap so nguyen thu:" +(i+1) + "của mảng A" ));
-        if ((nhap >0 || nhap <= 0)&&parseInt(nhap) == nhap){
-            mangSoNguyenA.push(nhap);
-            i++;
-        } else {
-            alert("nhập sai:");
-        }
-    }
-
-    for (i=0 ; i<10 ; ){
-        nhap =parseInt (prompt("nhap so nguyen thu:" +(i+1) + "của mảng B" ));
-        if ((nhap >0 || nhap <= 0)&&parseInt(nhap) == nhap){
-            mangSoNguyenB.push(nhap);
-            i++;
-        } else {
-            alert("nhập sai:");
-        }
-    }
-
-    for (i=0;i<10;i++){
-        mangSoNguyenC.push(mangSoNguyenA[i]);
-    }
-
-    for (i=0;i<10;i++){
-        mangSoNguyenC.push(mangSoNguyenB[i]);
-    }
-
-    document.write(mangSoNguyenC.join(""))
-
-
+  let a = new Array(10);
+let b = new Array(10);
+for (let i=0 ; i < a.length ; i++){
+    a[i]= parseInt(prompt("Nhập vào phần tử mảng a :"))
+}
+for (let j=0 ; j < b.length ; j++) {
+    b[j] = parseInt(prompt("Nhập vào phần tử mảng b :"))
+}
+let c = a.concat(b);
+document.write(c);
 </script>
 
 
