push thuc hanh 15/11/2020

--- a/Ss14_Hàm 1/Thực hành/Tìm giá trị nhỏ nhất của mảng/baitap.html
+++ b/Ss14_Hàm 1/Thực hành/Tìm giá trị nhỏ nhất của mảng/baitap.html
@@ -23,9 +23,9 @@
     function result(arr) {
         document.write("Mảng: " + arr +"<br>");
         if (minArray(arr) === -1){
-            document.write("Đây là mảng rỗng <hr>");
+            document.write("Đây là mảng rỗng");
         }else {
-            document.write("min là: "+ arr[minArray(arr)] +"<hr>");
+            document.write("min là: "+ arr[minArray(arr)] );
         }
     }
 
