--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai1.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai1.html
@@ -8,27 +8,17 @@
 
 <body>
     <script>
-        let number = [];
-        let soLonHon10 = [];
-        let i;
-        let nhap;
-        for (i = 0; i < 10;) {
-            nhap =parseInt (prompt("nhập số nguyên: "));
-            if ((nhap > 0 || nhap <= 0) && parseInt(nhap) == nhap) {
-                number.push(nhap);
-                i++;
-            } else {
-                alert("nhập sai:");
-            }
+       let a = [];
+    let count =0;
+    for(i=0;i<10;i++){
+        a[i] = parseInt(prompt("Nhập biến")) ;
+        if(a[i]>=10){
+            document.write(a[i] +", ");
+            count++
+    
         }
-
-        for (i = 0; i < number.length; i++) {
-            if (number[i] >= 10) {
-                soLonHon10.push(number[i]);
-            }
-        }
-
-        document.write(soLonHon10.join(","))
+    }document.write("Số phần tử lớn hơn 10 là :"+count + "phần tử."+"<br>");
+    document.write("Phần tử mảng của mảng a là :" + a );
     </script>
 
 
