--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai2.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai2.html
@@ -9,36 +9,18 @@
 <body>
 
     <script>
-        let number = [];
-        let i;
-        let nhap;
-        let max;
-        let viTri;
-
-        for (i = 0; i < 10;) {
-            nhap =parseInt (prompt("nhập số nguyên: "));
-            if ((nhap > 0 || nhap <= 0) && parseInt(nhap) == nhap) {
-
-                number.push(nhap);
-                i++;
-
-            } else {
-                alert("nhập sai:")
-            }
+    let b = [];
+    for (i=0;i<5;i++){
+        b[i] = parseInt(prompt("Nhập biến : "));
+    }
+    document.write("Giá trị mảng b là : " + b)
+    document.write("<br>");
+    max = b[0];
+    for (i=2;i<5;i++){
+        if (b[i]>max){
+            max = b[i];
         }
-
-        max = number[0];
-        for (i = 1; i < number.length; i++) {
-
-            if (number[i] >= max) {
-                max = number[i];
-                viTri = i;
-            }
-
-        }
-        document.write(number.join(","))
-        document.write("<br>")
-        document.write("số lớn nhất là " + max + "tại ví trí" + viTri)
+    }document.write("Phần tử lớn nhất của mảng b là: " + max + " và vị trí của phần tử là : " + b.indexOf(max));
     </script>
 </body>
 
