--- a/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai3.html
+++ b/Ss13_Mảng 2/Bài tập/Luyện tập mảng 1/bai3.html
@@ -8,45 +8,26 @@
 
 <body>
     <script>
-        let number = [];
-        let i;
-        let nhap;
-
-        for (i = 0; i < 10;) {
-            nhap =parseInt (prompt("nhập số nguyên: "));
-            if ((nhap > 0 || nhap <= 0) && parseInt(nhap) == nhap) {
-
-                number.push(nhap);
-                i++;
-
-            } else {
-                alert("nhập sai:");
-            }
+        let b = [];
+    let n = parseInt(prompt("Nhập vào số phần tử của mảng n= : "));
+    for (i=0;i<n;i++){
+        b[i] = parseInt(prompt("Nhập biến : "));
+    }
+    document.write("Giá trị mảng b là : " + b)
+    document.write("<br>");
+    max = b[0];
+    for (i=2;i<n;i++) {
+        if (b[i] > max) {
+            max = b[i];
         }
+    }alert("Giá trị lớn nhất của mảng là : " + max);
+    document.write("Phần tử lớn nhất của mảng b là: " + max + "<br>");
+    let sum = 0;
+    for (i=0;i<n;i++){
+        sum += b[i];
+    }let avg = sum/n;
+    document.write("Giá trị trung bình các phần tử trong mảng đó là : " + avg);
 
-        let max = number[0];
-        let viTriMax;
-
-        for (i = 1; i < number.length; i++) {
-
-            if (number[i] >= max) {
-                max = number[i];
-                viTriMax = i;
-            }
-        }
-
-        let tongCacGiaTri = 0;
-        let giaTriTB;
-
-        for (i = 0; i < number.length; i++) {
-            tongCacGiaTri += number[i];
-        }
-        giaTriTB = tongCacGiaTri / 10;
-
-        document.write(number.join(","));
-        document.write("<br>");
-        document.write("số lớn nhất là " + max + "tại ví trí" + viTriMax + "<br>");
-        document.write("gia tri trung binh la" + giaTriTB);
 
     </script>
 
